--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-three/drei": "^8.8.1",
     "@react-three/fiber": "^7.0.26",
     "babel-plugin-glsl": "^1.0.0",
+    "browser-monads": "^1.0.0",
     "gatsby": "^4.5.4",
     "gatsby-plugin-glslify": "^1.0.2",
     "gatsby-plugin-image": "^2.6.0",
@@ -28,8 +29,13 @@
     "gsap": "^3.9.1",
     "lil-gui": "^0.16.0",
     "locomotive-scroll": "^4.1.4",
+    "prop-types": "^15.8.1",
     "react": "^17.0.1",
+    "react-countdown": "^2.3.2",
+    "react-date-countdown-timer": "^1.1.0",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "react-hook-use-window-width": "^1.0.5",
     "react-icons": "^4.3.1",
     "react-locomotive-scroll": "^0.2.0",
     "three": "^0.137.5"
